--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,14 @@ em {
 strong {
   font-weight: bold; }
 
+.hero-title, .section-header {
+  margin: 0 auto;
+  width: 90%; }
+
+.logo-holder, .gallery-article a {
+  font-weight: bold;
+  text-transform: uppercase; }
+
 body {
   min-width: 75em; }
 
@@ -94,7 +102,12 @@ body {
 
 .main-header, .hero-unit, .main-footer {
   background: #2c2e3b;
-  color: white; }
+  color: white;
+  background-image: url("../assets/img/header-bg.png"); }
+  @media all and (-webkit-min-device-pixel-ratio: 1.5) {
+    .main-header, .hero-unit, .main-footer {
+      background-image: url("../assets/img/header-bg@2x.png");
+      background-size: 70px 70px; } }
 
 .article-gallery, .sponsor-gallery, .map-holder {
   background: #dddddd;
@@ -103,6 +116,17 @@ body {
 .hero-title, .section-header {
   margin: 0 auto;
   width: 90%; }
+
+.logo-holder, .gallery-article a {
+  font-weight: bold;
+  text-transform: uppercase; }
+
+.logo-holder {
+  font-size: 2em;
+  line-height: 1.5rem;
+  letter-spacing: 0.01em; }
+  .logo-holder span {
+    color: #c0382b; }
 
 .hero-title > h1 {
   margin-bottom: 1.5rem;
@@ -141,6 +165,8 @@ body {
     color: #999;
     font-size: 0.875em;
     line-height: 1.3125rem; }
+    .gallery-article p::last-of-type {
+      margin-bottom: 0.375rem; }
     .gallery-article p strong {
       color: #000; }
   .gallery-article a {
@@ -153,10 +179,8 @@ body {
     color: #fff;
     text-align: center;
     text-decoration: none;
-    text-transform: uppercase;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    letter-spacing: 0.1em;
-    font-weight: bold; }
+    letter-spacing: 0.1em; }
 
 .sponsor-holder {
   margin-bottom: 1.5rem; }
