--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,1 +1,23 @@
 @import "mixins/base-grid";
+
+@mixin at2x($image_name, $w: auto, $h: auto, $extention: '.png') {
+  background-image: url($image_name + $extention);
+  $x2img : $image_name + '@2x' + $extention;
+
+  @media all and (-webkit-min-device-pixel-ratio : 1.5) {
+    background-image: url($x2img);
+    background-size: $w $h;
+  }
+}
+%center-setter {
+  margin: 0 auto;
+  width: 90%;
+}
+%uppercase-bold{
+  font-weight: bold;
+  text-transform: uppercase;
+}
+@mixin uppercase-bold($letter-spacing) {
+  @extend %uppercase-bold;
+  letter-spacing: $letter-spacing;
+}
