--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,38 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+/*!
+ *  Font Awesome 4.0.3 by @davegandy - http://fontawesome.io - @fontawesome
+ *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
+ */
+@font-face {
+  font-family: 'FontAwesome';
+  src: url("../assets/fonts/fontawesome-webfont.eot?v=4.0.3");
+  src: url("../assets/fonts/fontawesome-webfont.eot?#iefix&v=4.0.3") format("embedded-opentype"), url("../assets/fonts/fontawesome-webfont.woff?v=4.0.3") format("woff"), url("../assets/fonts/fontawesome-webfont.ttf?v=4.0.3") format("truetype"), url("../assets/fonts/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+.icon, .hero-feature figure {
+  display: inline-block;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.fa-repeat:before {
+  content: "\f01e"; }
+
+.fa-gears:before {
+  content: "\f085"; }
+
+.fa-desktop:before {
+  content: "\f108"; }
+
+.fa-rocket:before {
+  content: "\f135"; }
+
 em {
   font-style: italic; }
 
@@ -141,6 +173,10 @@ body {
   letter-spacing: 0.01em;
   font-size: 2em;
   line-height: 1.5rem; }
+  .logo-holder h1 i {
+    color: #c0382b;
+    font-size: 0.875em;
+    letter-spacing: 0.1em; }
   .logo-holder h1 span {
     color: #c0382b; }
 
@@ -170,11 +206,16 @@ body {
     color: #c0382b; }
 
 .hero-feature figure {
+  vertical-align: middle;
+  font-size: 5rem;
+  text-align: center;
+  line-height: 9rem;
   margin: 1.5rem auto;
-  width: 9em;
-  height: 9em;
+  width: 9rem;
+  height: 9rem;
   border-radius: 100%;
-  background: rgba(100, 100, 100, 0.5); }
+  background: rgba(100, 100, 150, 0.5);
+  display: block; }
 .hero-feature h2 {
   letter-spacing: 0.1em;
   margin-bottom: 1.5rem;
@@ -205,7 +246,8 @@ body {
     border-top-right-radius: 3px; }
   .gallery-article p {
     margin-bottom: 0.1875rem;
-    overflow: ellipsis;
+    overflow: hidden;
+    text-overflow: ellipsis;
     padding: 0 2em;
     max-height: 3rem;
     color: #999;
@@ -218,7 +260,7 @@ body {
   .gallery-article a {
     letter-spacing: 0.1em;
     display: block;
-    margin-top: 1.5rem;
+    margin-top: 1.35rem;
     padding: 0.75em 1em;
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
