--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "base";
 @import "globals";
+@import "font-awesome/font-awesome";
 @import "typography";
 @import "layout";
 @import "module";
