--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -29,3 +29,17 @@
   width: 100%;
   height: auto;
 }
+%circle-icon {
+  vertical-align: middle;
+  text-align: center;
+  border-radius: 100%;
+  display: block;
+  margin: 0 auto;
+}
+@mixin circle-icon($circle-size) {
+  @extend %circle-icon;
+  font-size: $circle-size / 1.8;
+  line-height: $circle-size;
+  width: $circle-size;
+  height: $circle-size;
+}
