--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -26,18 +26,10 @@
     $columns: $column-count
   );
 }
-@media screen and (max-width: 40em) {
-    @include base-grid(
-    $width: 100%,
-    $gutter: 0,
-    $columns: 1
-  );
-
-@include generate-grid(
-    $width: 100%,
-    $gutter: 0,
-    $columns: 1
-  );
+@media screen and (max-width: 45em) {
+  .hero-feature, .gallery-article, .sponsor-holder {
+   width: 90% !important;
+  }
 }
 
 %pane {
