--- a/sass/_module.scss
+++ b/sass/_module.scss
@@ -1,16 +1,14 @@
 @import "globals";
 @import "mixins";
-.icon {
-  @extend %fa;
-}
 .logo-holder {
   h1 {
     @include uppercase-bold(0.01em);
     font-size: 2em;
     line-height: $line-height;
     i {
-      color: $bold-col; font-size: 0.875em;
-      letter-spacing: 0.1em;
+      @extend %fa;
+      color: $bold-col;
+      letter-spacing: 0.1em; font-size: 0.875em;
     }
     span {
       color: $bold-col;
@@ -68,6 +66,7 @@
   p {
     @include push-down(1);
     text-align: center;
+    color: $shadow-text-col
   }
 }
 
@@ -98,13 +97,38 @@
     border-top-left-radius: 3px; // TODO: Add compass for css3 support
     border-top-right-radius: 3px;
   }
+  figure {
+    $button-size: 3rem;
+
+    position: relative;
+    a {
+      position: absolute;
+      bottom: $button-size / 1.5;
+      left: 50%;
+      box-sizing: border-box;
+      margin-left: -$button-size / 2;
+      width: $button-size;
+      height: $button-size;
+      border-radius: 100%;
+
+      background: url(../assets/img/Plus_symbol.svg) $bold-col;
+      background-position: center center;
+      background-size: 3.5em;
+      box-shadow: 0 0 0 0.4em fade_out($bold-col, 0.7);
+    }
+  }
+  h3 {
+    @include uppercase-bold(0.1em);
+    padding: 0 2em;
+    font-size: 0.875em;
+  }
   p {
     @include push-down(0.125);
     overflow: hidden;
-    text-overflow: ellipsis;
     padding: 0 2em;
     max-height: $line-height * 2;
     color: #999;
+    text-overflow: ellipsis;
     font-size: 0.875em;
     line-height: $line-height * 0.875;
     &::last-of-type {
@@ -145,15 +169,26 @@
   @extend center-setter;
   color: $header-text-col;
 }
-.twitter-icon{
+%icon-pos{
+  @extend %fa;
+  display: block;
+  float: left;
+}
+.twitter-icon {
+  @extend %icon-pos;
+  @extend %fa-twitter;
   @include circle-icon(4rem);
   background: #1b9ac7;
 }
-.facebook-icon{
+.facebook-icon {
+  @extend %icon-pos;
+  @extend %fa-facebook;
   @include circle-icon(4rem);
   background: #3a5a9a;
 }
-.google-plus-icon{
+.google-plus-icon {
+  @extend %icon-pos;
+  @extend %fa-google-plus;
   @include circle-icon(4rem);
   background: #dd4a38;
 }
