--- a/sass/_module.scss
+++ b/sass/_module.scss
@@ -1,199 +1,10 @@
 @import "globals";
 @import "mixins";
-.logo-holder {
-  h1 {
-    @include uppercase-bold(0.01em);
-    font-size: 2em;
-    line-height: $line-height;
-    i {
-      @extend %fa;
-      color: $bold-col;
-      letter-spacing: 0.1em; font-size: 0.875em;
-    }
-    span {
-      color: $bold-col;
-    }
-  }
-}
+@import "modules/header";
+@import "modules/hero-unit";
+@import "modules/article-gallery";
+@import "modules/footer";
+@import "modules/small-stuff"
 
-.main-nav { // TODO: Fix that float
-  a {
-    @include uppercase-bold(0.1em);
-    display: block;
-    border-bottom: 1px solid $shadow-text-col;
-    color: $shadow-text-col;
-    text-decoration: none;
-    font-size: 0.875em;
-    &:hover {
-      border-bottom: 1px solid $bold-col;
-      color: $header-text-col;
-    }
-  }
-  li {
-    display: inline-block;
-    margin: 0 $line-height / 2;
-  }
-  .current-menu-item a {
-    border-bottom: 1px solid $bold-col;
-    color: $header-text-col;
-  }
-}
-.hero-title {
-  > h1 {
-    @include push-down(1);
-    text-align: center;
-    font-size: 3em;
-    line-height: $line-height * 2;
-    > strong {
-      color: $bold-col;
-    }
-  }
-}
-.hero-feature {
-  $hero-figure-size: 9rem;
-  figure {
-    @extend %fa;
-    @include circle-icon($hero-figure-size);
-    @include push-down(1);
-    background: rgba(100,100,150,0.5);
-  }
-  h2 {
-    @include uppercase-bold(0.1em);
-    @include push-down(1);
-    text-align: center;
-    font-size: 1.2em;
-  }
-  p {
-    @include push-down(1);
-    text-align: center;
-    color: $shadow-text-col
-  }
-}
 
-.section-header {
-  > h2{
-    @include push-down(2);
-    text-align: center;
-    font-size: 1.5em;
-    &::before, &::after {
-      margin: 0 1em 0 1em;
-      color: lighten($text-col, 40%); // TODO: Fix this shit, the lines need to be wider, like 3ems.
-      content: "\2014";
-      font-size: 1em;
-    }
-  }
-}
 
-.gallery-article {
-@include push-down(1);
-  border-radius: 3px;
-  background: #fff;
-  figure > img {
-    @extend %img-resize;
-    // TODO: Add hover overlay on image, read webkit filter
-    // TODO: Add Them buttons
-    margin-bottom: $line-height * 2;
-    max-height: $line-height * 12;
-    border-top-left-radius: 3px; // TODO: Add compass for css3 support
-    border-top-right-radius: 3px;
-  }
-  figure {
-    $button-size: 3rem;
-
-    position: relative;
-    a {
-      position: absolute;
-      bottom: $button-size / 1.5;
-      left: 50%;
-      box-sizing: border-box;
-      margin-left: -$button-size / 2;
-      width: $button-size;
-      height: $button-size;
-      border-radius: 100%;
-
-      background: url(../assets/img/Plus_symbol.svg) $bold-col;
-      background-position: center center;
-      background-size: 3.5em;
-      box-shadow: 0 0 0 0.4em fade_out($bold-col, 0.7);
-    }
-  }
-  h3 {
-    @include uppercase-bold(0.1em);
-    padding: 0 2em;
-    font-size: 0.875em;
-  }
-  p {
-    @include push-down(0.125);
-    overflow: hidden;
-    padding: 0 2em;
-    max-height: $line-height * 2;
-    color: #999;
-    text-overflow: ellipsis;
-    font-size: 0.875em;
-    line-height: $line-height * 0.875;
-    &::last-of-type {
-      @include push-down(0.25);
-    }
-    strong {
-      color: #000;
-    }
-  }
-  a {
-    @include uppercase-bold(0.1em);
-    display: block;
-    margin-top: $line-height * 0.9;
-    padding: 0.75em 1em;
-    border-bottom-right-radius: 3px;
-    border-bottom-left-radius: 3px;
-    background: $bold-col;
-    color: #fff;
-    text-align: center;
-    text-decoration: none;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-    line-height: $line-height * 1;
-  }
-}
-
-.sponsor-holder {
-  @include push-down(1);
-  img {
-    @extend %img-resize;
-  }
-}
-#map-canvas {
-  min-height: $line-height * 15;
-  width: 100%;
-}
-
-.social-icons {
-  @extend center-setter;
-  color: $header-text-col;
-}
-%icon-pos{
-  @extend %fa;
-  display: block;
-  float: left;
-}
-.twitter-icon {
-  @extend %icon-pos;
-  @extend %fa-twitter;
-  @include circle-icon(4rem);
-  background: #1b9ac7;
-}
-.facebook-icon {
-  @extend %icon-pos;
-  @extend %fa-facebook;
-  @include circle-icon(4rem);
-  background: #3a5a9a;
-}
-.google-plus-icon {
-  @extend %icon-pos;
-  @extend %fa-google-plus;
-  @include circle-icon(4rem);
-  background: #dd4a38;
-}
-
-.footer-logo-holder {
-  @extend .logo-holder;
-  @extend %center-setter;
-}
