--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,16 @@ body {
   border-bottom: 1px solid #c0382b;
   color: white; }
 
+.section-header > h2 {
+  margin-bottom: 3rem;
+  text-align: center;
+  font-size: 1.5em; }
+  .section-header > h2::before, .section-header > h2::after {
+    margin: 0 1em 0 1em;
+    color: #888888;
+    content: "\2014";
+    font-size: 1em; }
+
 .hero-title > h1 {
   margin-bottom: 1.5rem;
   text-align: center;
@@ -286,16 +296,6 @@ body {
   margin-bottom: 1.5rem;
   text-align: center;
   color: #6a6d76; }
-
-.section-header > h2 {
-  margin-bottom: 3rem;
-  text-align: center;
-  font-size: 1.5em; }
-  .section-header > h2::before, .section-header > h2::after {
-    margin: 0 1em 0 1em;
-    color: #888888;
-    content: "\2014";
-    font-size: 1em; }
 
 .gallery-article {
   margin-bottom: 1.5rem;
@@ -352,19 +352,18 @@ body {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     line-height: 1.5rem; }
 
-.sponsor-holder {
-  margin-bottom: 1.5rem; }
-
-#map-canvas {
-  min-height: 22.5rem;
-  width: 100%; }
-
 .social-icons {
-  color: white; }
+  color: white;
+  width: 21rem;
+  height: 4rem;
+  margin: 1rem auto;
+  display: inline;
+  text-align: center; }
 
 .twitter-icon, .facebook-icon, .google-plus-icon {
   display: block;
-  float: left; }
+  float: left;
+  margin: 0 1.5rem; }
 
 .twitter-icon {
   font-size: 2.22222rem;
@@ -386,3 +385,10 @@ body {
   width: 4rem;
   height: 4rem;
   background: #dd4a38; }
+
+.sponsor-holder {
+  margin-bottom: 1.5rem; }
+
+#map-canvas {
+  min-height: 22.5rem;
+  width: 100%; }
