--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -12,4 +12,4 @@ $red: rgb(192, 56, 43);
 $bold-col: $red;
 $shadow-text-col: #6a6d76;
 
-$base-font: "Proxima Nova";
+$base-font: "Proxima Nova", sans-serif;
